@@ -18,10 +18,13 @@ class GnomeShellSearchPluginCommand(NotebookCommand):
 	arguments = ('[NOTEBOOK]',)
 
 	def run(self):
+		from zim.config import ConfigManager
+		
 		notebook, p = self.build_notebook()
-		Provider(notebook).main()
-		
-		
+		config_manager = ConfigManager()
+		preferences = config_manager.get_config_dict('preferences.conf')['GnomeShellSearch']
+		preferences.setdefault('search_all', True)
+		Provider(notebook, preferences['search_all']).main()
 		
 from zim.plugins import PluginClass
 		
@@ -37,6 +40,10 @@ Disabling this plugin has no effect. Please, use the "System Settings > Search" 
 		'author': 'Davi da Silva Böger',
 	}
 	
+	plugin_preferences = (
+		('search_all', 'bool', _('Search all notebooks, instead of only the default'), True),
+	)
+	
 	def __init__(self, config=None):
 		PluginClass.__init__(self, config)
 
@@ -48,7 +55,7 @@ SEARCH_IFACE='org.gnome.Shell.SearchProvider2'
 
 class Provider(dbus.service.Object):
 
-	def __init__(self, notebook=None):
+	def __init__(self, notebook=None, search_all=True):
 		import dbus.mainloop.glib
 		
 		dbus.mainloop.glib.DBusGMainLoop(set_as_default=True)
@@ -58,6 +65,7 @@ class Provider(dbus.service.Object):
 		self.notebook = notebook
 		self.notebook_cache = {}
 		self.timeout_id = None
+		self.search_all = search_all
 		
 	def main(self):
 		import gtk
@@ -82,22 +90,18 @@ class Provider(dbus.service.Object):
 		self._start_search(terms, reply_handler)
 		
 	def _start_search(self, terms, reply_handler):
-		search_notebook = None
 		notebook_terms = []
 		normal_terms = []
 		for term in terms:
 			index = term.find("notebook:")
 			if index == 0:
-				notebook_terms.append(term)
+				notebook_terms.append(term[9:])
 			else:
-				normal_terms.append(term)
+				normal_terms.append(term.lower())
 		terms = normal_terms
-		if notebook_terms:
-			notebook_id = notebook_terms[-1][9:].strip()
-			search_notebook = self._get_notebook(notebook_id)
-		if not search_notebook:
-			search_notebook = self.notebook
-		if not search_notebook:
+
+		search_notebooks = self._get_search_notebooks(notebook_terms)
+		if not search_notebooks:
 			reply_handler([])
 			return None
 
@@ -106,9 +110,10 @@ class Provider(dbus.service.Object):
 
 		result = []
 		query = " ".join(terms).lower()
-		for page in search_notebook.index.walk():
-			if query in page.basename.lower():
-				result.append(search_notebook.name + "#" + page.name)
+		for search_notebook in search_notebooks:
+			for page in search_notebook.index.walk():
+				if query in page.basename.lower():
+					result.append(search_notebook.name + "#" + page.name)
 		reply_handler(result)
 		
 	def _get_search_results(self, reply_handler, search_notebook):
@@ -117,23 +122,47 @@ class Provider(dbus.service.Object):
 	def _cancel_search(self):
 		pass
 		
+	def _get_search_notebooks(self, notebook_terms):
+		import zim.notebook
+		
+		search_notebooks_info = []
+		notebook_list = zim.notebook.get_notebook_list()
+		if notebook_terms:
+			for notebook_id in notebook_terms:
+				notebook_info = notebook_list.get_by_name(notebook_id)
+				if notebook_info:
+					search_notebooks_info.append(notebook_info)
+		elif self.search_all:
+			search_notebooks_info.extend(notebook_list)
+		else:
+			search_notebooks_info.append(self.notebook.info)
+			
+		search_notebooks = []
+		for notebook_info in search_notebooks_info:
+			search_notebooks.append(self._load_notebook(notebook_info.name))
+			
+		return search_notebooks
+		
 	def _get_notebook(self, notebook_id=None):
 		notebook = None
 		if not notebook_id or notebook_id == self.notebook.name:
 			notebook = self.notebook
 		else:
-			if notebook_id in self.notebook_cache:
-				notebook = self.notebook_cache[notebook_id]
-			else:
-				import zim.notebook
-				
-				notebook_list = zim.notebook.get_notebook_list()
-				notebook_info = notebook_list.get_by_name(notebook_id)
-				if notebook_info:
-					notebook, p = zim.notebook.build_notebook(notebook_info)
-					self.notebook_cache[notebook_id] = notebook
+			notebook = self._load_notebook(notebook_id)
 		return notebook
 
+	def _load_notebook(self, notebook_id):
+		if notebook_id in self.notebook_cache:
+			notebook = self.notebook_cache[notebook_id]
+		else:
+			import zim.notebook
+				
+			notebook_list = zim.notebook.get_notebook_list()
+			notebook_info = notebook_list.get_by_name(notebook_id)
+			if notebook_info:
+				notebook, _ = zim.notebook.build_notebook(notebook_info)
+				self.notebook_cache[notebook_id] = notebook
+		return notebook
 		
 	@dbus.service.method(dbus_interface=SEARCH_IFACE, 
 						in_signature='as', out_signature='aa{sv}')
@@ -143,9 +172,7 @@ class Provider(dbus.service.Object):
 			notebook_id, page_id = identifier.split("#")
 			path = page_id.split(":")
 			name = path[-1]
-			description = "/".join(path[0:-1])
-			#if notebook_id != self.notebook.name:
-			#	description = "(%s) %s" % (notebook_id, description)
+			description = "(%s) %s" % (notebook_id, "/".join(path[0:-1]))
 			meta = {
 				"id": identifier,
 				"name": name,
